[package]
name = "rust_tcp_ipc"
version = "0.2.6"
authors = ["Michael <v.mi@gmx.de>"]
edition = "2018"
license = "MIT"
keywords = ["tcp", "ipc"]
readme = "README.md"
repository = "https://github.com/voelklmichael/rust_tcp_ipc"
homepage = "https://github.com/voelklmichael/rust_tcp_ipc"
documentation = "https://docs.rs/rust_tcp_ipc"
description = "Simple to use crate for Interprocess Communication via TCP."


[lib]
name = "rust_tcp_ipc"
path = "src/lib.rs"

[dependencies]
log = "0.4.5"

[dev-dependencies]
simplelog = "0.5"
